--- a/src/index.css
+++ b/src/index.css
@@ -62,6 +62,10 @@ main {
   margin-right: -28px !important;
 } 
 
-/* .MuiDataGrid-menuIcon:hover {
-  margin-right: -8px !important;
-} */
+.MuiDataGrid-filterFormOperatorInput, .MuiDataGrid-filterFormColumnInput {
+  display: none !important;
+}
+
+.MuiPaper-root {
+  height: fit-content !important;
+}
