--- a/src/index.css
+++ b/src/index.css
@@ -68,12 +68,18 @@ main {
   display: none !important;
 }
 
-.MuiDataGrid-panelWrapper {
-  width: 100%;
-  height: 600px;
-  /* position: absolute; */
+.MuiPaper-root {
 }
 
-.MuiPaper-root {
-  max-height: 600px;
+.MuiDataGrid-panelWrapper {
+  width: 100%;
+}
+
+.customized-hook-demo {
+}
+
+#customized-hook-demo-listbox {
+  z-index: 1000; 
+  position: relative; 
+  overflow: visible; 
 }
