Отображение названий курсов в хедерах таблиц

--- a/src/index.css
+++ b/src/index.css
@@ -96,4 +96,6 @@ main {
 
 .MuiDataGrid-columnHeaderTitleContainerContent {
   height: 100%;
+  width: 100% !important;
+  justify-content: center;
 }
