--- a/src/app/index.css
+++ b/src/app/index.css
@@ -1,27 +1,24 @@
-@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700&display=swap');
-
-/* Уберите height и width из этого селектора */
-html,
-body,
-#root {
-  font-family: 'Source Sans Pro', sans-serif;
+/* @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700&display=swap');
+ */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap')
+  html,
+  body, #root {
+  /* font-family: 'Source Sans Pro', sans-serif; */
 }
 
-/* Удалите height из этого селектора */
 .app {
   display: flex;
   position: relative;
   z-index: 10;
 }
 
-/* Добавьте высоту и ширину для .content */
 .content {
   height: 100%;
   width: 100%;
 }
 
 main {
-  margin-top: 50px; /* чтобы основное содержимое не перекрывалось топбаром */
+  margin-top: 40px;
 }
 
 ::-webkit-scrollbar {
@@ -46,9 +43,8 @@ main {
 .MuiDataGrid-menuIcon,
 .MuiDataGrid-iconButtonContainer {
   visibility: visible !important;
-  opacity: 1 !important;
   margin-right: 22px !important;
-  opacity: 0.6 !important;
+  opacity: 0.8 !important;
 }
 
 .MuiDataGrid-columnHeaderTitleContainer:hover .MuiDataGrid-menuIcon {
@@ -58,10 +54,6 @@ main {
 
 .MuiDataGrid-menuIcon:hover {
   opacity: 1 !important;
-}
-
-.MuiDataGrid-columnHeaderTitleContainer .MuiDataGrid-menuIcon {
-  margin-left: 8px !important;
 }
 
 .MuiDataGrid-columnHeader:hover .MuiButtonBase-root:not(.MuiCheckbox-root) {
@@ -100,10 +92,40 @@ main {
   justify-content: center;
 }
 
+.MuiIconButton-root {
+  color: #73b1bf !important;
+  opacity: 0.9 !important;
+}
+
+.MuiDataGrid-columnHeaderTitleContainerContent .MuiCheckbox-root {
+  color: white !important;
+}
+
+.MuiDataGrid-columnHeaderTitleContainer {
+  white-space: inherit !important;
+}
+
+.MuiDataGrid-columnHeader--filtered .MuiDataGrid-iconButtonContainer {
+  width: 0 !important;
+}
+
+.MuiDataGrid-columnHeader--sorted .MuiDataGrid-iconButtonContainer {
+  width: 0 !important;
+}
+
+.MuiDataGrid-columnHeaderTitle {
+  overflow: hidden !important;
+}
+
+.MuiDataGrid-cell {
+  line-height: 1.1 !important;
+  white-space: unset !important;
+}
+
 /* .MuiDataGrid-columnHeaders {
   position: fixed !important;
-} */
+}
 
-/* .MuiDataGrid-virtualScrollerContent {
+.MuiDataGrid-virtualScrollerContent {
   margin-top: 2.2%;
 } */
