--- a/src/app/index.css
+++ b/src/app/index.css
@@ -1,9 +1,7 @@
 /* @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700&display=swap');
  */
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap')
-  html,
-  body, #root {
-  /* font-family: 'Source Sans Pro', sans-serif; */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap')body; .MuiDataGrid-root {
+  font-family: 'Roboto', sans-serif !important;
 }
 
 .app {
@@ -56,6 +54,10 @@ main {
   opacity: 1 !important;
 }
 
+.MuiDataGrid-columnHeader {
+  line-height: 1;
+}
+
 .MuiDataGrid-columnHeader:hover .MuiButtonBase-root:not(.MuiCheckbox-root) {
   transform: none !important;
   margin-right: -28px !important;
@@ -71,10 +73,6 @@ main {
   /* background: black; */
 }
 
-.MuiDataGrid-panel,
-.MuiPaper-root {
-  /* background: #73b1bf !important; */
-}
 
 #customized-hook-demo-listbox {
   z-index: 1000;
@@ -87,7 +85,7 @@ main {
 }
 
 .MuiDataGrid-columnHeaderTitleContainerContent {
-  height: 100%;
+  height: 100% !important;
   width: 100% !important;
   justify-content: center;
 }
@@ -115,11 +113,13 @@ main {
 
 .MuiDataGrid-columnHeaderTitle {
   overflow: hidden !important;
+  line-height: 1 !important;
 }
 
 .MuiDataGrid-cell {
   line-height: 1.1 !important;
   white-space: unset !important;
+  font-size: 14px;
 }
 
 .MuiTablePagination-root:last-child {
@@ -133,10 +133,24 @@ main {
   color: white !important;
 }
 
-/* .MuiDataGrid-columnHeaders {
+.MuiDataGrid-topContainer {
   position: fixed !important;
+  top: 5em !important;
 }
 
-.MuiDataGrid-virtualScrollerContent {
-  margin-top: 2.2%;
-} */
+.MuiDataGrid-topContainer::before {
+  content: "";
+  position: absolute;
+  top: -5em; /* Регулируйте этот отступ в зависимости от высоты вашей шапки */
+  left: -1em;
+  width: 101%;
+  height: 5em; /* Регулируйте эту высоту в зависимости от высоты вашей шапки */
+  background-color: whitesmoke;
+  z-index: -1;
+}
+
+.MuiDataGrid-root {
+  margin-top: 5em !important;
+}
+
+
